# pdq

./: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/pdq/: __init__.py
