[project]
name = "pdq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tim Barnes", email = "tim-barnes@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "ruff>=0.12.1",
]

[tool.ruff.lint]
# 1. Enable in addition:
# - flake8-bugbear (`B`)
# - Exception messages (`F`)
# - Logging (`G` and `LOG`)
# - Print (`T20`)
# - Pytest (`PT`)
# - isort (`I`)
# - Mccabe complexity (`C90`)
select = ["B", "EM", "F", "G", "LOG", "T20", "PT", "I", "C90"]

# 2. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 3. Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
# 4. Use single quotes in `ruff format`.
quote-style = "single"

